# CROSS

./: .gitignore  .gitmodules  README.md  appveyor.yml
.github/workflows/: Build.yml  BuildAndroid.yml  BuildIOS.yml  BuildMacOS.yml  BuildWindows.yml
Binaries/MacOS/: libassimpMAC.dylib
Binaries/Windows/x64/: assimp.lib
Demo/Assets/: GameConfig.xml
Demo/Assets/Engine/Shaders/: Light.sha  MultiLight.sha  Simple.sha  SingleLight.sha  Texture.sha  UI.sha
Demo/Assets/Engine/Shaders/Sources/: SingleLight.frag  Skybox.fgm  Skybox.vtx
Demo/Assets/Materials/: SimpleGreen.mat  TexturedCube.mat
Demo/Assets/Scenes/: Cube.scn  TexturedCube.scn
Demo/Assets/Scenes/ApocalypticCity/: ApocalypticCity.scn
Demo/Assets/Scenes/ApocalypticCity/Materials/: BackgroundBuildings.mat  Car.mat  Facade1.mat  Facade2.mat  Facade3.mat  Facade4.mat  Facade5.mat  Facade6.mat  Foreground.mat  LianaMain.mat  LianaSmall.mat  Misc.mat  Outpost.mat  PlantFront.mat  PlantSide.mat  PostersGrass.mat  Road.mat  RoadStuff.mat  RoofLiana.mat  Rubbish.mat  Sky.mat  Trees.mat  Wire.mat
Demo/Assets/Shaders/: DepthTest.frag  Specular.sha
Demo/Projects/Android/: build.gradle
Demo/Projects/Android/app/: build.gradle
Demo/Projects/Android/app/src/main/: AndroidManifest.xml
Demo/Projects/Android/gradle/wrapper/: gradle-wrapper.properties
Demo/Projects/CMake/: .gitignore  CMakeLists.txt
Demo/Projects/MacOS/: .gitignore  .lldbinit  cross_lldb.py
Demo/Projects/MacOS/Binaries/: libfmodL.dylib
Demo/Projects/MacOS/CrossMac.xcodeproj/: project.pbxproj
Demo/Projects/MacOS/CrossMac.xcodeproj/project.xcworkspace/xcuserdata/max.xcuserdatad/: UserInterfaceState.xcuserstate
Demo/Projects/MacOS/CrossMac.xcodeproj/xcuserdata/max.xcuserdatad/xcschemes/: xcschememanagement.plist
Demo/Projects/MacOS/CrossMac/Assets.xcassets/AppIcon.appiconset/: Contents.json
Demo/Projects/Windows/: .gitignore  Cross++.sln  Cross++.vcxproj  Cross++.vcxproj.filters  cross.natstepfilter  cross.natvis
Demo/Projects/iOS/: .gitignore
Demo/Projects/iOS/Cross++.xcodeproj/: project.pbxproj
Demo/Projects/iOS/Cross++.xcodeproj/project.xcworkspace/xcuserdata/max.xcuserdatad/: UserInterfaceState.xcuserstate
Demo/Projects/iOS/Cross++.xcodeproj/xcuserdata/max.xcuserdatad/xcschemes/: xcschememanagement.plist
Demo/Sources/: ArrayTest.cpp  ArrayTest.h  AudioScreen.cpp  CameraController.cpp  CameraController.h  Demo.cpp  Demo.h  FileUtils.cpp  FileUtils.h  StringTest.cpp  StringTest.h  Tester.cpp  Tester.h  TransformGizmo.cpp
Demo/Sources/Scenes/: DemoScene.cpp  DemoScene.h
Demo/Sources/Scenes/Light/: DirectionalLightScene.cpp  MaterialScene.cpp  MultiLightScene.cpp  PointLightScene.cpp  SpotLightScene.cpp
Demo/Sources/Scenes/Maps/: DiffuseScene.cpp  NakedScene.cpp  NormalScene.cpp  RoughnessScene.cpp  SpecularScene.cpp
Demo/Sources/Scenes/Misc/: DepthScene.cpp  SkyboxScene.cpp  TransparencyScene.cpp
Demo/Sources/Scenes/Simple/: TriangleScene.cpp
Demo/Sources/UI/: ComponentsView.cpp  ComponentsView.h  FileSelector.cpp  FileSelector.h  FilesView.cpp  FilesView.h  LaunchView.cpp  MaterialVisualBox.cpp  MaterialVisualBox.h  MenuBar.cpp  MenuBar.h  MeshVisualBox.cpp  MeshVisualBox.h  PropertiesView.h  SceneView.cpp  SceneView.h  ShaderVisualBox.cpp  ShaderVisualBox.h  TransformVisualBox.cpp  View.cpp  View.h
Demo/Sources/UI/Views/: About.h  CameraControllerView.cpp  CameraControllerView.h  ComponentsView.cpp  ComponentsView.h  FilesView.cpp  FilesView.h  PropertiesView.cpp  PropertiesView.h  SceneView.cpp  SceneView.h  Stats.cpp  Stats.h
Sources/Core/: Camera.cpp  Camera.h  Color.cpp  Component.cpp  Config.cpp  Config.h  Cross.h  Entity.cpp  Entity.h  Event.h  Factory.h  File.cpp  File.h  Game.cpp  Game.h  Graphics.cpp  Graphics.h  Input.h  Light.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Property.h  Scene.cpp  Scene.h  Sound.cpp  Sound.h  System.cpp  System.h  Texture.cpp  Transform.cpp  VertexBuffer.cpp
Sources/Experimental/: Array.h  Function.h  String.cpp  String.h
Sources/Internals/: Audio.cpp  GraphicsGL.cpp  GraphicsGL.h  MemoryManager.cpp  MemoryManager.h
Sources/Libs/TinyXML2/: tinyxml2.h
Sources/Math/: All.cpp  All.h  Matrix.h  Rect.cpp  Rect.h
Sources/Platform/Android/: AndroidSystem.cpp  Cross.cpp
Sources/Platform/Android/com/cross/: CrossActivity.java
Sources/Platform/MacOS/: Cross.cpp  MacSystem.h  MacSystem.mm
Sources/Platform/Windows/: GLES.cpp  Native.cpp  OpenGL.cpp  WINSystem.cpp
Sources/Platform/iOS/: AppDelegate.mm  CrossViewController.mm  IOSSystem.h  IOSSystem.mm  Main.storyboard
Sources/Shaders/: LightsShader.cpp  MultiLightShader.cpp  MultiLightShader.h  Shader.cpp  Shader.h
Sources/Utils/: Cubemap.h  Debugger.cpp  FreeCameraScene.cpp  FreeCameraScene.h  PrimitiveDrawer.cpp  Skybox.cpp
